fixing cut off arrows

--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -79,7 +79,7 @@
 
 .slick-prev
 {
-    left: 0px;
+    left: 2px;
     z-index: 99999;
 }
 [dir='rtl'] .slick-prev
@@ -98,7 +98,7 @@
 
 .slick-next
 {
-    right: 0px;
+    right: 2px;
     z-index: 99999;
 }
 [dir='rtl'] .slick-next
